# sfdata-annexa-clean

./: LICENSE  README.md  humans.txt  main.py  pyproject.toml
.github/workflows/: tests.yml
sfdata_annexa_clean/: __main__.py
sfdata_annexa_clean/annex_a/: cleaner.py
sfdata_annexa_clean/annex_a/merger/: configuration.py  file_scanner.py  matcher.py  matcher_report.py  workbook_util.py  workflow.py
sfdata_annexa_clean/config/: __init__.py
sfdata_annexa_clean/datatables/: __init__.py  cache.py  load.py  merge.py  normalise.py
tests/: configuration.py
tests/annex_a/merger/: test_config.py  test_file_scanner.py  test_matcher_columns.py  test_matcher_datasources.py  test_matcher_report.py  test_workbook_util.py
tests/datatables/: test_load.py  test_normalise.py
tests/regex/: test_regex.py
