[tool.poetry]
name = "sfdata_annexa_clean"
version = "0.1.0-dev"
description = "A cleaner module for Annex A Data"
authors = [
    "Céline Gross <celine.gross@socialfinance.org.uk>",
    "Chris Owen <christopher.owen@socialfinance.org.uk>",
    "Kaj Siebert <kaj@k-si.com>"
]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE",
    "humans.txt",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
jupyterlab = "^3.1.17"
pandas = "^1.3.3"
dacite = "^1.6.0"
PyYAML = "^5.4.1"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
XlsxWriter = "^3.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
